--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.5.0",
+    "mdb-ui-kit": "^1.0.0-alpha3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
