image part added

--- a/TODO-app-backend/src/main/resources/application.properties
+++ b/TODO-app-backend/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/todo-app
+createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 logging.level.org.springframework.web=DEBUG
 spring.datasource.username = root
 spring.datasource.password = 1234
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
