--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.5.0",
     "mdb-ui-kit": "^1.0.0-alpha3",
+    "ngx-image-compress": "^8.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
